fix: h2 is not centered on mobile view. Added text-align: center; at max-width: 800px;

--- a/styles/_homepage.scss
+++ b/styles/_homepage.scss
@@ -310,6 +310,9 @@ button {
 @media screen and (max-width: 800px) {
   .homepage {
     .info-container {
+      h2{
+        text-align: center;
+      }
       .text-wrapper {
         text-align: center;
         width: 90%;
